# tunelab-neutrino-tau

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  NeutrinoTau.csproj  NeutrinoTau.sln  README.md  Rakefile  description.json
.github/workflows/: release.yml
rust/: Cargo.toml  build.rs
rust/src/: config.rs  engine.rs  label.rs  lib.rs  neutrino_label.rs  neutrino_score.rs  speaker.rs  synthesize_task.rs  synthesizer.rs
rust/src/labels/: temp_full.lab
rust/src/snapshots/: neutrino_tau_native__label__tests__parse_example_line.snap  neutrino_tau_native__label__tests__parse_many_lines.snap  neutrino_tau_native__neutrino_label__tests__parse_example_line.snap  neutrino_tau_native__neutrino_label__tests__parse_many_lines.snap  neutrino_tau_native__neutrino_score__tests__score_to_labels.snap  neutrino_tau_native__neutrino_score__tests__score_to_labels.snap.new
src/: NeutrinoTauSynthesisTask.cs  NeutrinoTauVoiceEngine.cs
