[package]
name = "neutrino_tau_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
csbindgen = "1.9.3"

[dependencies]
anyhow = "1.0.101"
native-dialog = "0.9.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.1"
lazy-regex = "3.4.2"
tempfile = "3.25.0"
wana_kana = "4.0.0"
num_cpus = "1.17.0"
wav_io = "0.1.15"
itertools = "0.14.0"

[dev-dependencies]
insta = "1.46.3"
